Ajuste Final - Etapa 2

--- a/css/filmes.css
+++ b/css/filmes.css
@@ -1,6 +1,10 @@
-/*  Movie */
 
-.content .movie {
+/*  Movie */
+body .content{
+    font-family: "Vollkorn", Georgia, serif;
+}
+
+.content .movie{     
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(3 1fr);
@@ -12,28 +16,31 @@
   text-align: center;
 }
 
-.content h1 {
+
+.content .pricetitle h1{
   font-size: 3rem;
+  
 }
-.content .movie img {
-  height: 650px;
-  width: 70%;
+.content .movie img{
+  height:650px;
+  width:70%;
   min-width: 470px;
-  border: 2px solid #7b68ee;
-  box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
+  border: 2px solid #7B68EE;
+  box-shadow: 0 0 3rem rgba(123, 104, 238, 1); 
 }
-.content .movie .filmetit {
-  display: none;
-}
-
-#avatar {
-  height: 650px;
-  width: 65%;
-  border: 2px solid #7b68ee;
-  box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
+.content .movie .filmetit{
+display: none;
 }
 
-.content .movie .detalhes {
+#avatar{
+  height:650px;
+  width:65%;
+  border: 2px solid #7B68EE;
+  box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
+  
+}
+
+.content .movie .detalhes{
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,60 +48,62 @@
   height: 100%;
 }
 
-.content .movie .detalhes h1 {
-  margin-bottom: 3rem;
+.content .movie .detalhes h1{
+  margin-bottom:3rem;
   font-size: 3rem;
   margin: auto;
+
 }
 
-.content .movie .info {
+.content .movie .info{
   display: grid;
-  background: linear-gradient(136deg, #040f55, #000000);
-  border: 2px solid #040f55;
-  border-radius: 20px;
+  background: linear-gradient(136deg,#040F55,#000000);
+  border:2px solid #040F55;
+  border-radius:20px;
   font-size: 1.3rem;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns:1fr 1fr 1fr;
   text-align: center;
-  height: auto;
+  height:auto;
 }
 
-.content .movie .info .sinopse h2 {
+
+.content .movie .info .sinopse h2{
   margin-bottom: 1rem;
   padding-top: 1rem;
 }
 
-.content .movie .info .sinopse {
+.content .movie .info .sinopse{
   margin-bottom: 1rem;
   grid-column: 1/4;
-  padding: 0 1rem;
+  padding:0 1rem;
 }
 
-.content .movie .info h3 {
-  padding-bottom: 0.5rem;
+.content .movie .info h3{
+  padding-bottom:.5rem;
 }
 
-.content .movie .detalhes .info .idade14 p {
+.content .movie .detalhes .info .idade14 p{
   background-color: #f35e04;
   display: inline;
   padding: 4px 8px;
   border-radius: 2px;
   font-weight: bold;
 }
-.content .movie .detalhes .info .idade12 p {
+.content .movie .detalhes .info .idade12 p{
   background-color: #ffcc00;
   display: inline;
   padding: 4px 8px;
   border-radius: 2px;
   font-weight: bold;
 }
-.content .movie .detalhes .info .idadelivre p {
+.content .movie .detalhes .info .idadelivre p{
   background-color: #00af51;
   display: inline;
   padding: 4px 9px;
   border-radius: 2px;
   font-weight: bold;
 }
-.content .movie .detalhes .info .idade16 p {
+.content .movie .detalhes .info .idade16 p{
   background-color: #e61700;
   display: inline;
   padding: 4px 8px;
@@ -102,54 +111,57 @@
   font-weight: bold;
 }
 
-/*  Sessões  */
+  /*  Sessões  */
 
-.content .movie .detalhes .info .sessoes {
+.content .movie .detalhes .info .sessoes{
   color: white;
   grid-column: 1/4;
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-bottom:2rem;
+  
 }
 
-.content .movie .detalhes .info .mob-sess {
-  display: none;
-  font-weight: bold;
+.content .movie .detalhes .info .mob-sess{
+  display:none;
+  font-weight:bold;
   grid-column: 1/4;
   padding-top: 2rem;
-  padding-bottom: 2rem;
-  width: 80%;
-  justify-self: center;
+  padding-bottom:2rem;
+  width:80%;
+  justify-self:center;
+
 }
 
-/*  Estilização de tabelas  */
+  /*  Estilização de tabelas  */
 
-.content .sessoes table {
+.content .sessoes table{
   font-size: 1.3rem;
   text-align: center;
   margin: auto;
   border-collapse: collapse;
   width: 80%;
+
 }
 
-.content table tr {
+.content table tr{
   height: 3rem;
 }
 
-.content table th,
-table td {
+.content table th, table td{
   border: white solid 1px;
 }
 
-.content .pricetitle {
-  display: flex;
+.content .pricetitle{
+  display:flex;
   justify-content: center;
   align-items: center;
   text-align: center;
   padding-bottom: 5rem;
   padding-top: 8rem;
+  
 }
 
-.content .pricetitle img {
+.content .pricetitle img{
   width: 4rem;
   height: 4rem;
   padding-left: 1rem;
@@ -158,125 +170,127 @@ table td {
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
-.pricetitle:hover img {
+.pricetitle:hover img{
   -moz-transform: rotate(30deg);
-  -webkit-transform: rotate(30deg);
-  transform: rotate(30deg);
-}
-.content .preços {
-  display: flex;
-  color: white;
-  justify-content: center;
-  text-align: center;
-  margin: auto;
-  flex-direction: column;
+	-webkit-transform: rotate(30deg);
+	transform: rotate(30deg);
+  }
+.content .preços{
+display: flex; 
+color: white;
+justify-content: center;
+text-align: center;
+margin: auto;
+flex-direction: column;
 }
 
-.content .preços .mob-price {
+.content .preços .mob-price{
   display: none;
   font-size: 1rem;
   text-align: center;
   margin: auto;
   border-collapse: collapse;
   width: 90%;
-  background: linear-gradient(136deg, #040f55, #000000);
+  background: linear-gradient(136deg,#040F55,#000000);
 }
 
-.content .preços .mob-price .entradas {
-  width: 26%;
-}
-.content .preços .mob-price .semana {
-  width: 22%;
-}
-.content .preços .mob-price .fimsemana {
-  width: 22%;
-}
+	.content .preços .mob-price .entradas{
+	  width: 26%;
+	}
+.content .preços .mob-price .semana{
+	  width: 22%;
+	}
+.content .preços .mob-price .fimsemana{
+	  width: 22%;
+	}
 
-.content .preços .mob-price .last-cel {
-  border-top: 1px solid black;
-  border-right: 1px solid black;
-  background-color: black;
+.content .preços .mob-price .last-cel{
+  border-top:1px solid black;
+  border-right: 1px solid black; 
+  background-color:black;
   width: 30%;
 }
 
-.content .preços .tabela {
+.content .preços .tabela{
   font-size: 1.2rem;
   text-align: center;
   margin: auto;
   border-collapse: collapse;
   width: 50%;
-  background: linear-gradient(136deg, #040f55, #000000);
+  background: linear-gradient(136deg,#040F55,#000000);
 }
-.content .preços .imgddd {
-  display: flex;
-  text-align: center;
+.content .preços .imgddd{
+  display:flex;
+  text-align:center;
   justify-content: center;
-  align-items: center;
-  height: auto;
-  width: 100%;
+  align-items:center;
+  height:auto;
+  width:100%;
   margin: 0;
 }
 
-.content .preços .imgddd img {
-  height: 2.5rem;
-  width: 3rem;
-  padding-left: 0.5rem;
+.content .preços .imgddd img{
+  height:2.5rem;
+  width:3rem;
+  padding-left: .5rem;
 }
 
-.content .preços .compre {
-  width: 80%;
-  display: flex;
+.content .preços .compre{
+  width:80%;
+  display:flex;
   margin: auto;
 }
 
-.content .preços .compre a {
+.content .preços .compre a{
   border: 1px outset #df9916;
-  width: 100%;
-  display: flex;
+  width:100%;
+  display:flex;
   justify-content: center;
   text-align: center;
   align-items: center;
-  border-radius: 0.7rem;
+  border-radius: .7rem;
   color: white;
   font-weight: bold;
 }
-.content .preços .compre a:hover {
-  background: #7b68ee;
+.content .preços .compre a:hover{
+background: #7B68EE;
 }
 
-.content .preços .compre img {
+.content .preços .compre img{
   height: 2rem;
   width: 2rem;
-  padding-left: 0.5rem;
+  padding-left: .5rem; 
 }
 
-.content .preços .tabela thead th {
+.content .preços .tabela thead th{
   width: 3rem;
 }
 
-.content .preços .tabela .topcel {
-  border-top: 1px solid black;
-  border-left: 1px solid black;
-  background: black;
+
+.content .preços .tabela .topcel{ 
+  border-top:1px solid black;
+  border-left: 1px solid black; 
+  background:black;
 }
-.content .preços p {
-  padding-top: 0.3rem;
-  padding-left: 5rem;
-  font-size: 0.8rem;
+.content .preços p{
+padding-top: .3rem;
+padding-left: 5rem;
+font-size:0.8rem;
 }
 
-.content .preços .tabela .botcel {
-  border-bottom: 1px solid black;
-  border-left: 1px solid black;
+.content .preços .tabela .botcel{
+  border-bottom:1px solid black;
+  border-left: 1px solid black; 
   background: black;
 }
-.content .trailer {
+.content .trailer{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+
 }
-.content .trailer .trailertitle {
+.content .trailer .trailertitle{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -286,11 +300,12 @@ table td {
   width: 100%;
 }
 
-.content .trailer .trailertitle h1 {
+.content .trailer .trailertitle h1{
   text-align: center;
   font-size: 3rem;
+
 }
-.content .trailer .trailertitle img {
+.content .trailer .trailertitle img{
   width: 3rem;
   height: 3rem;
   padding-left: 1rem;
@@ -301,142 +316,148 @@ table td {
   padding-bottom: 1rem;
 }
 
-.trailertitle:hover img {
+.trailertitle:hover img{
   -moz-transform: rotate(30deg);
-  -webkit-transform: rotate(30deg);
-  transform: rotate(30deg);
-}
-
-.content .trailer .teaser {
-  display: flex;
-  width: 100%;
-  text-align: center;
-  justify-content: center;
-  height: 65vh;
-  margin-bottom: 10rem;
-}
-
-.content .trailer .teaser iframe {
-  margin: auto;
-  height: 85%;
-  width: 900px;
-  box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
-}
-
-/*	Portabilidades	*/
-
-@media (max-width: 1200px) {
-  .content .movie {
-    margin-top: 5rem;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3 1fr);
+	-webkit-transform: rotate(30deg);
+	transform: rotate(30deg);
   }
-  .content .movie img {
-    height: 530px;
-    width: 50%;
+
+.content .trailer .teaser{
+	display: flex;
+	width: 100%;
+	text-align: center;
+	justify-content: center;
+	height: 65vh;
+	margin-bottom: 10rem;
+}
+  
+.content .trailer .teaser iframe{
+	margin: auto;
+	height: 85%;
+	width: 900px;
+	box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
+}
+
+	/*	Portabilidades	*/
+
+@media (max-width:1200px){
+	.content .movie{    
+	  margin-top:5rem;
+	  grid-template-columns: 1fr;
+	  grid-template-rows: repeat(3 1fr);
+	    
+	}
+	.content .movie img{
+	  height:530px;
+	  width:50%;
     min-width: 350px;
     max-width: 445px;
+	}
+    #avatar{
+  height:550px;
+  width:50%;
+  min-width: 350px;  
   }
-  #avatar {
-    height: 550px;
-    width: 50%;
-    min-width: 350px;
-  }
-  .content .movie .detalhes h1,
-  .content .movie .detalhes .info .sessoes,
-  .content .preços .tabela {
-    display: none;
-  }
-  .content h1 {
-    font-size: 2.5rem;
-  }
-  .content .movie .filmetit {
-    display: block;
-    margin-bottom: 2rem;
-    grid-row: 1;
-  }
-  .content .movie .info {
-    text-align: center;
-    width: 100%;
-    margin-top: 3rem;
-  }
+	.content .movie .detalhes h1, .content .movie .detalhes .info .sessoes, .content .preços .tabela{
+	  display: none;
+	}
+	.content h1{
+	 font-size: 2.5rem;
+	}
+	.content .movie .filmetit{
+		display: block;
+		margin-bottom: 2rem;
+		grid-row: 1;
+	}
+	.content .movie .info{
+	  text-align: center;
+	  width:100%;
+	  margin-top:3rem;
+	}
 
-  .content .movie .detalhes .info .mob-sess {
-    display: grid;
-  }
-  .content .movie .detalhes .info .mob-sess table {
-    border-collapse: collapse;
-  }
-  .mob-sess tr:nth-child(2n) {
-    background-color: #7b68ee;
-    color: black;
-  }
-  .content .pricetitle {
-    padding: 0 0 2rem 0;
-    width: 80%;
-    margin: auto;
-  }
-
-  .content .pricetitle img {
-    align-self: center;
-    padding-left: 1rem;
-  }
-  .content .preços .mob-price {
-    display: table;
-    min-width: 370px;
-  }
-
-  .content .preços .imgddd img {
-    height: 2.5rem;
-    width: 1.8rem;
-  }
-  .content .preços .compre {
-    width: 85%;
-    height: auto;
-    display: flex;
-    margin: auto;
-    font-size: 1rem;
-  }
-  .content .preços .compre img {
-    height: 2rem;
-    width: 1.5rem;
+	.content .movie .detalhes .info .mob-sess{
+	  display:grid;  
+	}
+	.content .movie .detalhes .info .mob-sess table{
+		border-collapse:collapse;
+	}
+	.mob-sess tr:nth-child(2n) {
+	  background-color: #7B68EE;
+	  color:black;
+	 }
+	.content .pricetitle{
+	  padding: 0 0 2rem 0;
+	  width: 80%;
+	  margin: auto;
+	}
+	
+	.content .pricetitle img{
+	  align-self: center;
+	  padding-left: 1rem;
+	
+	}
+	.content .preços .mob-price{
+	  display: table; 
+    min-width: 360px;
+    
+	}
+  main.content{
     padding-left: 0;
   }
-  .content .preços p {
-    padding: 0.1rem 1.1rem;
-    font-size: 0.7rem;
-  }
-  .content .trailer .teaser {
-    height: 300px;
-  }
-
-  .content .trailer .teaser iframe {
-    height: 100%;
-    width: 90%;
-    box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
-    border-radius: 5px;
-  }
-  .content .trailer .trailertitle {
-    padding: 4rem 0 2rem 0;
-  }
+		  
+	.content .preços .imgddd img{
+	  height:2.5rem;
+	  width:1.8rem;
+	}
+	 .content .preços .compre{
+	  width:85%;
+	  height: auto;
+	  display:flex;
+	  margin: auto;
+	  font-size: 1rem;
+	} 
+	.content .preços .compre img{
+	  height: 2rem;
+	  width: 1.5rem;
+	  padding-left: 0;   
+	}
+	.content .preços p{
+	padding:0.1rem 1.1rem;
+	font-size:0.7rem;
+	}
+	.content .trailer .teaser{
+	  height: 300px;
+	
+	}
+	  
+	.content .trailer .teaser iframe{
+		height: 100%;
+		width: 90%;
+		box-shadow: 0 0 3rem rgba(123, 104, 238, 1);
+		border-radius:5px;
+	}
+	  .content .trailer .trailertitle{
+	  padding: 4rem 0 2rem 0;
+	}
 }
 
-@media (max-width: 500px) {
-  .content .movie img {
-    height: 430px;
-    width: 100%;
+@media (max-width:500px){
+	.content .movie img{
+	  height:430px;
+	  width:100%;
     min-width: 230px;
+	}
+  #avatar{
+  height:450px;
+  width:100%;
+  min-width: 230px;  
   }
-  #avatar {
-    height: 450px;
-    width: 100%;
-    min-width: 230px;
-  }
-  .content .pricetitle img {
-    padding-left: 0;
-  }
-  .content .movie .info {
-    font-size: 1.2rem;
-    grid-gap: 0.7rem;
-  }
+  .content .pricetitle img{
+	  padding-left: 0;
+	}
+  .content .movie .info{
+  font-size: 1.2rem;
+  grid-gap: .7rem;
+ 
+}
 }
