--- a/css/main.css
+++ b/css/main.css
@@ -1,114 +1,114 @@
-@import url("https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Vollkorn:ital,wght@0,400;0,700;1,400&display=swap'); 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
 
-* {
-  margin: 0px;
-  padding: 0px;
+
+*{
+  margin:0px;
+  padding:0px;
 }
 
-body {
-  font-family: "Vollkorn", Georgia, serif !important;
+body{
+  font-family: "Vollkorn", Georgia, serif ;
 }
 
-main {
-  font-family: "Roboto", Georgia, serif;
+main{
+	font-family: "Roboto", Georgia, serif;
 }
 
-li {
-  list-style: none;
+li{
+    list-style: none;
 }
 
-a {
-  text-decoration: none;
+a{
+    text-decoration: none;
 }
 
-img {
-  display: block;
-  max-width: 100%;
-  border-radius: 5px;
+img{
+    display: block;
+    max-width: 100%;
+    border-radius: 5px;
 }
 
-html,
-body {
-  background-color: black;
-  background-attachment: fixed;
-  background-size: 100%;
+html, body {
+	background-color: black;
+	background-attachment: fixed;
+	background-size: 100%;
   scroll-behavior: smooth;
-  background-image: url("https://media.giphy.com/media/UYBDCJjwOd9Re/giphy.gif");
-  background-repeat: repeat;
-}
+	background-image: url('https://media.giphy.com/media/UYBDCJjwOd9Re/giphy.gif');
+	background-repeat: repeat;
+} 
 
 /* Layout - Grid Geral */
 
-.layout {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-areas:
+.layout{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: 
     "header header header"
     "slide slide slide"
     "content content content"
     "footer footer footer";
 }
 
-.col-wide {
-  grid-column: 1/-1;
+.col-wide{
+    grid-column: 1/-1;
 }
 
 /* Header */
 
-.header {
-  grid-area: header;
-  background: linear-gradient(136deg, #000000, #040f55);
-  padding: 15px;
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
+.header{
+    grid-area: header;
+    background: linear-gradient(136deg,#000000,#040F55);
+    padding: 15px;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
 }
 
-.header nav ul {
-  display: flex;
-  flex-wrap: wrap;
+.header nav ul{
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.header nav a {
-  display: block;
-  padding: 10px;
-  color: whitesmoke;
-  font-size: 1.125em;
-  background: rgba(0, 0, 0, 0.125);
-  border-radius: 5px;
-  transition: 0.1s;
+.header nav a{
+    display: block;
+    padding: 10px;
+    color: whitesmoke;
+    font-size: 1.125em;
+    background: rgba(0, 0, 0, 0.125);
+    border-radius: 5px;
+    transition: 0.1s;
 }
 
-.header nav a:hover {
-  background: rgba(0, 0, 0, 0.5);
+.header nav a:hover{
+    background: rgba(0, 0, 0, 0.5);
 }
 
 .header li + li {
-  margin-left: 30px;
+    margin-left: 30px;
 }
 
 .logo {
-  max-width: 120px;
+    max-width: 120px;
 }
 
 /* Slide */
 
 .slide {
-  grid-area: slide;
-  display: grid;
-  grid-template-columns: auto;
+    grid-area: slide;
+    display: grid;
+    grid-template-columns: auto;
 }
-.slide .carousel-mobile {
-  display: none;
+.slide .carousel-mobile{
+	display: none;
 }
 
 /* Content */
 
-.content {
-  grid-area: content;
-  margin: 0 auto;
-  padding: 30px;
+.content{
+    grid-area: content;
+    margin: 0 auto;
+    padding: 30px;
 }
 
 .content .titulo {
@@ -118,15 +118,15 @@ body {
   padding: 30px;
 }
 
-.content .filmes {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 2fr 2fr;
-  gap: 70px;
-  justify-items: center;
-  align-content: center;
-  justify-content: space-around;
-  padding: 15px;
+.content .filmes{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 2fr 2fr;
+    gap: 70px;
+    justify-items: center;
+    align-content: center;
+    justify-content: space-around;
+    padding: 15px;
 }
 
 .text-item {
@@ -135,303 +135,308 @@ body {
   bottom: 0;
   z-index: 10;
   padding-top: 20px;
-  padding-bottom: 20px;
-  color: #ffffff;
-  text-align: center;
-  font-weight: 700;
-  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.6);
-  background-color: rgba(0, 0, 0, 0.6);
+  padding-bottom: 20px;  color: #ffffff;
+  text-align: center;  font-weight: 700;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-color: rgba(0,0,0,0.6);
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
 }
 
-.zoom:hover h2 {
+.zoom:hover h2{
   -moz-transform: translate(0, -100%);
-  -webkit-transform: translate(0, -100%);
-  transform: translate(0, -100%);
+	-webkit-transform: translate(0, -100%);
+	transform: translate(0, -100%);
 }
 
-.zoom {
+.zoom{
   overflow: hidden;
   border-radius: 5px;
   height: 400px;
-  border: 1px solid #7b68ee;
+  border: 1px solid #7B68EE;
   box-shadow: 0 0 2rem rgba(123, 104, 238, 1);
-}
-.zoom img {
+} 
+.zoom img{
   max-width: 100%;
   -moz-transition: all 0.3s;
   -webkit-transition: all 0.3s;
   transition: all 0.3s;
+  
 }
 
 .zoom:hover img {
-  -moz-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  transform: scale(1.1);
+	-moz-transform: scale(1.1);
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+  
 }
 
-.content img {
-  height: 400px;
-  width: 325px;
+
+.content img  {
+    height: 400px;
+    width:325px;
+        
 }
 
-.content div.scrollmenu {
-  display: none;
+.content div.scrollmenu{
+	display: none;
 }
-.content div.scrollmenu img {
-  border: 1px solid #7b68ee;
+.content div.scrollmenu img{
+	border: 1px solid #7B68EE;
   box-shadow: 0 0 2rem rgba(123, 104, 238, 1);
 }
 
 .tracking-in-contract-bck {
-  -webkit-animation: tracking-in-contract-bck 1s
-    cubic-bezier(0.215, 0.61, 0.355, 1) both;
-  animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.61, 0.355, 1)
-    both;
+	-webkit-animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract-bck 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
 }
 
 /* Footer */
 
 .footer {
-  grid-area: footer;
-  background: linear-gradient(136deg, #000000, #040f55);
-  display: grid;
-  grid-template-columns: 2fr 1fr 2fr;
-  grid-template-rows: 1fr auto;
-  gap: 15px;
-  text-align: center;
-  justify-content: center;
-  align-self: center;
-  padding: 40px 15% 15px;
-  color: white;
-  font-size: 1rem;
+    grid-area: footer;
+    background: linear-gradient(136deg,#000000,#040F55);
+    display: grid;
+    grid-template-columns: 2fr 1fr 2fr;
+    grid-template-rows: 1fr auto;
+    gap: 15px ;
+    text-align: center;
+    justify-content: center ;
+    align-self: center ;
+    padding: 40px 15% 15px ;
+    color: white;
+    font-size: 1rem ;
 }
-.footer section.fale-conosco ul li {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 15px 15px 15px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  align-content: space-around;
-}
-
-.footer section.fale-conosco a {
-  color: #7b68ee;
-  text-decoration: none;
-  margin: 30px;
-  display: grid;
-  justify-content: center;
-  align-content: center;
+.footer section .fale-conosco ul li{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 15px 15px 15px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    align-content: space-around
 }
 
-.footer section.fale-conosco a:hover {
-  color: #7b68ee;
+.footer section.fale-conosco a, .footer section.local a{
+    color: #7B68EE !important;
+    text-decoration: none;
+    margin: 30px;
+    display: grid;
+    justify-content: center;
+    align-content: center;
 }
 
-.footer section.social a {
-  color: #7b68ee;
-  text-decoration: none;
-  margin: 30px;
-  border: 3px solid #7b68ee;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  display: grid;
-  justify-content: center;
-  align-content: center;
-  transition: 0.1s;
+.footer section.fale-conosco a:hover, .footer section.local a:hover{
+    color: white !important;
+}
+
+.footer section.social a{
+    color: #7B68EE;
+    text-decoration: none;
+    margin: 30px;
+    border: 3px solid #7B68EE;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    transition: 0.1s;
 }
 
 .footer section.social ul {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  list-style: none;
-  margin: 0;
-  padding: 0;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    list-style: none;
+    margin: 0;
+    padding: 0;
+
 }
 
-.footer section.social ul a {
-  align-items: center;
+.footer section.social ul a{
+    align-items: center;
 }
 
-.footer section.social a:hover {
-  color: #7b68ee;
+.footer section.social a:hover{
+  color: #7B68EE;
   background: rgba(0, 0, 0, 0.5);
+
 }
 
-.footer section.local {
-  display: grid;
-  justify-content: center;
+
+.footer section.local{
+    display: grid; 
+    justify-content: center;
 }
 
-.footer section.local a {
-  color: #7b68ee;
+.footer section.local a{
+  color: #7B68EE;
+  cursor:pointer;
 }
 
-.footer section.copyright {
-  font-size: 1rem;
-  font-weight: bold;
-  font-style: italic;
-  color: white;
-  text-align: center;
-  padding: 0px;
+.footer section.copyright{
+    font-size: 1rem;
+    font-weight: bold;
+    font-style: italic;
+    color: white;
+    text-align: center;
+    padding: 0px;
 }
 
 /*	Portabilidades */
 
-@media (max-width: 1200px) {
-  .layout {
-    grid-template-columns: minmax(160px, 1fr) 1fr;
-    grid-template-areas:
-      "header header "
-      "slide slide"
-      "content content"
-      "footer footer ";
-  }
+@media (max-width:1200px){                                    
+    .layout{
+      grid-template-columns: minmax(160px, 1fr) 1fr ;
+      grid-template-areas:
+        "header header "
+				"slide slide"
+        "content content"
+        "footer footer "
+    }
+  
+    .content{
+        display: grid;
+        grid-template-columns: minmax(160px, 1fr);
+        grid-template-rows: auto;
+    }
 
-  .content {
-    display: grid;
-    grid-template-columns: minmax(160px, 1fr);
-    grid-template-rows: auto;
-  }
+    .footer{
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr auto;
+    }
 
-  .footer {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr auto;
-  }
+    .footer section.local{
+        display: none;
+    }
 
-  .footer section.local {
-    display: none;
-  }
-
-  .footer section.fale-conosco {
-    display: none;
-  }
-  .footer section.social ul {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-  }
+    .footer section.fale-conosco{
+        display: none;
+    }
+    .footer section.social ul{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
 }
 
-@media (max-width: 900px) {
-  .layout {
-    grid-template-columns: 1fr;
-    grid-template-areas:
-      "header"
-      "slide"
-      "content"
-      "footer";
-  }
-  .header {
-    grid-template-rows: 1fr;
-    gap: 5px;
-  }
-  .header nav ul {
-    display: flex;
-    justify-content: flex-start;
-  }
-  .header nav a {
-    display: block;
-    padding: 5px;
-    color: whitesmoke;
-    font-size: 1.2rem;
-    background: rgba(0, 0, 0, 0.1);
-    border-radius: 5px;
-    transition: 0.1s;
-  }
-  .header .menu {
-    justify-content: flex-end;
-    padding: 0px;
-  }
-  carousel-indicators {
-    display: none;
-  }
-  .content {
-    display: grid;
-    grid-template-columns: minmax(160px, 1fr);
-    grid-template-rows: auto;
-  }
+@media (max-width:900px){                                    
+    .layout{
+      grid-template-columns: 1fr ;
+      grid-template-areas:
+        "header"
+				"slide"
+        "content"
+        "footer"
+    }
+  	.header{
+			grid-template-rows: 1fr;
+			gap:5px;
+		}
+		.header nav ul{
+			display: flex;
+			justify-content: flex-start;
+		}
+		.header nav a{
+	    display: block;
+	    padding: 5px;
+	    color: whitesmoke;
+	    font-size: 1.2rem;
+	    background: rgba(0, 0, 0, 0.1);
+	    border-radius: 5px;
+	    transition: 0.1s;
+		}
+		.header .menu{
+			justify-content: flex-end;
+			padding: 0px;
+		}
+		carousel-indicators{
+			display: none;
+		}
+    .content{
+        display: grid;
+        grid-template-columns: minmax(160px, 1fr);
+        grid-template-rows: auto;
+    }
 
-  .content .filmes {
-    display: none;
-  }
-  .content div.scrollmenu {
-    display: block;
-    background-color: black;
-    overflow: auto;
-    white-space: nowrap;
-  }
+		.content .filmes{
+			display: none;
+		}
+		.content div.scrollmenu {
+			display: block;
+		  background-color: black;
+		  overflow: auto;
+		  white-space: nowrap;
+		}
 
-  .content div.scrollmenu img {
-    border: 1px solid #040f55;
-  }
+		.content div.scrollmenu img{
+			border: 1px solid #040F55;
+		}
+		
+		.content div.scrollmenu a {
+		  display: inline-block;
+		  color: white;
+		  text-align: center;
+		  padding: 14px;
+		  text-decoration: none;
+		}
 
-  .content div.scrollmenu a {
-    display: inline-block;
-    color: white;
-    text-align: center;
-    padding: 14px;
-    text-decoration: none;
-  }
+		.conternt div.scrollmenu a:hover {
+  			background-color: rgba(0, 0, 0, 0.1);
+		}
+    .footer{
+        grid-template-columns: minmax(160px, 1fr);
+        grid-template-rows: 1fr auto;
+    }
 
-  .conternt div.scrollmenu a:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-  }
-  .footer {
-    grid-template-columns: minmax(160px, 1fr);
-    grid-template-rows: 1fr auto;
-  }
+    .footer section.local{
+        display: none;
+    }
 
-  .footer section.local {
-    display: none;
-  }
-
-  .footer section.fale-conosco {
-    display: none;
-  }
-  .footer section.social ul {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-  }
+    .footer section.fale-conosco{
+        display: none;
+    }
+    .footer section.social ul{
+        display: flex;
+        justify-content: center;
+        align-content: center;
+    }
 }
-@media (max-width: 450px) {
-  .slide .carousel {
-    display: none;
-  }
+@media (max-width:450px){
+	.slide .carousel{
+		display: none;
+	}
 
-  .slide .carousel-mobile {
-    display: flex;
-    flex-direction: column;
-  }
+	.slide .carousel-mobile{
+		display: flex;
+		flex-direction: column;
+	}
 
-  .slide .carousel-mobile img {
-    height: 140px;
-  }
-
-  .header nav ul {
-    flex-direction: column;
-    justify-content: flex-end;
-  }
-
-  .header nav ul li {
-    text-align: end;
-  }
-
-  .header li + li {
+	.slide .carousel-mobile img{
+		height: 140px;
+	}
+	
+	.header nav ul{
+		flex-direction: column;
+		justify-content: flex-end;
+	}
+	
+	.header nav ul li{
+		text-align: end;
+	}
+	
+	.header li + li {
     margin-left: 0px;
-  }
+	}
+	
+	.header nav a, .header nav a:hover{
+		background: rgba(0, 0, 0, 0);
+	}
 
-  .header nav a,
-  .header nav a:hover {
-    background: rgba(0, 0, 0, 0);
-  }
-
-  .content div.titulo {
-    font-size: 1.5rem;
-  }
+	.content div.titulo{
+		font-size: 1.5rem;
+	}
+	
 }
+
